--- a/index.html
+++ b/index.html
@@ -5,24 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EXCHANGE</title>
-    <link rel="stylesheet" href="./node_modules/flag-icons/css/flag-icons.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head> 
 <body>
     <div id="container">
         <header>
             <h1> EXCHANGE </h1>
-            <!--h2 id="info--base-rate"></h2-->
             <nav>
                 <form name="conversion_frm" method="get" id="frm">
                     <input type="text" name="quantity" id="quantity" value="1" />
-                    <img id="base-rate-flag" src="./node_modules/flag-icons/flags/4x3/us.svg"/>
+                    <img id="base-rate-flag" src="https://raw.githubusercontent.com/lipis/flag-icons/4f420bdd2e954f6da11220f1136fa181ed7019e7/flags/4x3/us.svg"/>
                     <select name="base_rate" id="base-rate-select">
-                        <!--option value="USD" selected>USD</option>
-                            <option value="EUR">EUR</option>
-                            <option value="JPY">JPY</option>
-                            <option value="CAD">CAD</option>
-                            <option value="ARS">ARS</option-->
                     </select>
                     <button id="convert-btn" type="submit">CONVERT</button>
                 </form>
